# godot-hap

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-release.yml
demo/: project.godot
demo/addons/godot-hap/: godot-hap.gdextension  godot-hap.gdextension.uid
demo/addons/godot-hap/shaders/: ycocg.gdshader  ycocg.gdshader.uid
demo/scenes/: hap_demo.tscn
demo/scripts/: hap_demo.gd  hap_demo.gd.uid
src/: GDHapVideoStream.cpp  GDHapVideoStream.hpp  GDHapVideoStreamPlayback.cpp  GDHapVideoStreamPlayback.hpp  VideoStreamHap.cpp  VideoStreamHap.hpp  VideoStreamPlaybackHap.cpp  register_types.cpp  register_types.hpp  video_stream_hap.cpp  video_stream_hap.hpp  video_stream_playback_hap.cpp  video_stream_playback_hap.hpp
